@@ -6,8 +6,13 @@
   metal:use-macro="python:macro"
   i18n:domain="eea">
 
-<!--metal:jsslot fill-slot="javascript_head_slot">
-</metal:jsslot-->
+<metal:jsslot fill-slot="javascript_head_slot">
+    <script type="text/javascript">
+        jQuery(document).ready(function(){
+            jQuery("#daviz-tutorials").DavizTutorials({prefix:"daviz-tutorials.html"});
+        });
+    </script>
+</metal:jsslot>
 
 <body>
 <div metal:fill-slot="main" class="daviz-settings">
